--- a/index.html
+++ b/index.html
@@ -67,22 +67,27 @@
             static CreateScene(engine, canvas) {
                 // This creates a basic Babylon Scene object (non-mesh)
                 var scene = new BABYLON.Scene(engine);
-                // This creates and positions a free camera (non-mesh)
-                var camera = new BABYLON.FreeCamera("camera1", new BABYLON.Vector3(0, 5, -10), scene);
-                // This targets the camera to scene origin
-                camera.setTarget(BABYLON.Vector3.Zero());
-                // This attaches the camera to the canvas
+                var camera = new BABYLON.ArcRotateCamera("camera", 0, 1, 10, BABYLON.Vector3.Zero(), scene);
                 camera.attachControl(canvas, true);
                 // This creates a light, aiming 0,1,0 - to the sky (non-mesh)
                 var light = new BABYLON.HemisphericLight("light1", new BABYLON.Vector3(0, 1, 0), scene);
                 // Default intensity is 1. Let's dim the light a small amount
                 light.intensity = 0.7;
-                // Our built-in 'sphere' shape. Params: name, options, scene
-                var sphere = BABYLON.MeshBuilder.CreateSphere("sphere", { diameter: 2, segments: 32 }, scene);
-                // Move the sphere upward 1/2 its height
-                sphere.position.y = 1;
                 // Our built-in 'ground' shape. Params: name, options, scene
                 var ground = BABYLON.MeshBuilder.CreateGround("ground", { width: 6, height: 6 }, scene);
+                const groundMaterial = new BABYLON.StandardMaterial("Ground Material", scene);
+                groundMaterial.diffuseColor = BABYLON.Color3.Red();
+                let groundTexture = new BABYLON.Texture(Assets.textures.checkerboard_basecolor_png.path, scene);
+                groundMaterial.diffuseTexture = groundTexture;
+                ground.material = groundMaterial;
+                //BABYLON.ImportMeshAsync(Assets.meshes.Yeti.rootUrl/Assets.meshes.Yeti.filename, scene, { meshNames: "" }).then((result) {
+                //result.meshes[0].scaling = new BABYLON.Vector3(0.1, 0.1, 0.1);        
+                //});
+                BABYLON.SceneLoader.ImportMeshAsync("", // 전체 메시 가져오기
+                Assets.meshes.Yeti.rootUrl, Assets.meshes.Yeti.filename, scene).then((result) => {
+                    // 첫 번째 메시의 스케일 조정
+                    result.meshes[0].scaling = new BABYLON.Vector3(0.1, 0.1, 0.1);
+                });
                 return scene;
             }
         }
